--- a/chart/redis-operator/templates/clusterrole.yaml
+++ b/chart/redis-operator/templates/clusterrole.yaml
@@ -88,4 +88,16 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - monitoring.coreos.com
+  resources:
+  - servicemonitors
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 {{- end }}
