--- a/chart/redis-operator/templates/crd.yaml
+++ b/chart/redis-operator/templates/crd.yaml
@@ -2486,6 +2486,11 @@ spec:
                         format: int32
                         type: integer
                     type: object
+                  replicas:
+                    default: 2
+                    description: Replicas specifies the replication factor for HA
+                    format: int32
+                    type: integer
                 required:
                 - enabled
                 type: object
