--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -22,6 +22,15 @@ rules:
   - ""
   resources:
   - pods
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - secrets
   verbs:
   - get
