--- a/chart/redis-operator/templates/clusterrole.yaml
+++ b/chart/redis-operator/templates/clusterrole.yaml
@@ -101,7 +101,7 @@ rules:
 - apiGroups:
   - monitoring.coreos.com
   resources:
-  - servicemonitors
+  - podmonitors
   verbs:
   - create
   - delete
