--- a/chart/redis-operator/templates/crd.yaml
+++ b/chart/redis-operator/templates/crd.yaml
@@ -2614,11 +2614,11 @@ spec:
                     required:
                     - enabled
                     type: object
+                  podMonitor:
+                    description: PodMonitor specifies whether to create a PodMonitor
+                    type: boolean
                   prometheusRule:
                     description: PrometheusRule specifies whether to create PrometheusRule
-                    type: boolean
-                  serviceMonitor:
-                    description: ServiceMonitor specifies whether to create a ServiceMonitor
                     type: boolean
                 required:
                 - enabled
